<resources>
    <string name="app_name">GPS Road Map</string>
    <string name="google_maps_key_part1" translatable="false">AIzaSyDq</string>
    <string name="google_maps_key_part2" translatable="false">HKAC2tl3G</string>
    <string name="google_maps_key_part3" translatable="false">KHPvqs54uQMah</string>
    <string name="google_maps_key_part4" translatable="false">rqcpGezt4</string>
    <string name="permisson_denied">Permission Denied</string>
    <string name="no_address_name_found">\"No Address Name Found \"</string>
    <string name="no_address_found">No Address Found</string>
    <string name="login_with_email"><u>Login with email</u></string>
    <string name="txt_continue">Continue</string>
    <string name="email">Email</string>
    <string name="hint_email">Enter email here</string>
    <string name="hint_password">Enter password here</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="manage_subscription">Manage Subscription</string>
    <string name="new_route">New Route</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="edit_route">Edit Route</string>
    <string name="not_registered_create_new_account">Not registered! Create new account</string>
    <string name="sign_up">Sign up</string>
    <string name="map">Map</string>
    <string name="start_and_end_location">Start &amp; End Location</string>
    <string name="select_home_location">Start location(home,depot)</string>
    <string name="select">Select</string>
    <string name="select_dest_location">End location(home,depot)</string>
    <string name="stops">Stops</string>
    <string name="no_stop_added_yet">No Stops Added yet</string>
    <string name="no_stop_added_yet_description">Add your stops to Route Planner, and it will produce the best possible route between them.</string>
    <string name="my_routes">My Routes</string>
    <string name="add_stop">Add Stop</string>
    <string name="start">Start</string>
    <string name="restarted">Restart</string>
    <string name="stop">Stop</string>
    <string name="delete_route">Delete Route</string>
    <string name="rename_route">Rename Route</string>
    <string name="duplicate_route">Duplicate Route</string>
    <string name="couldn_t_verify_your_email">Couldn\'t verify your email!</string>
    <string name="varify_email_desction_before">"Open the email we\'ve sent to "</string>
    <string name="varify_email_desction_after">" and click the link inside. Once you\'ve done that, press the Retry button below."</string>
    <string name="free_trial_subscription_title">"Your trial expires in a few days!"</string>
    <string name="free_trial_subscription_description">"we recommend subscribing beforehand to avoid any interruptionduring your routes"</string>
    <string name="subscribe_me">Subscribe me</string>
    <string name="later"><u>Later</u></string>
    <string name="days">Days</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="signout">SignOut</string>
    <string name="upgrade_to_premium">Upgrade to premium</string>
    <string name="routes">Routes</string>
    <string name="add_route">Add New Route</string>
    <string name="done">Done</string>
    <string name="set">Set</string>
    <string name="stop_add">Stop Add</string>
    <string name="clear_stops"><u>Clear all</u></string>
    <string name="add_more"><u>Add more</u></string>
    <string name="finish_route">Finish Route</string>
    <string name="finish">Finish</string>
    <string name="optimize_route">Optimize Route</string>
    <string name="edit_stop">Edit Stop</string>
    <string name="add_notes">Add notes (instructions, recipients, ...)</string>
    <string name="normal">Normal</string>
    <string name="asap" translatable="false">Urgent</string>
    <string name="arrive_time">Arrive between</string>
    <string name="and">And</string>
    <string name="stop_duration">Stop Duration</string>
    <string name="delete_stop">Delete stop</string>
    <string name="cancel_any_time_underline"><u>Cancel any time</u></string>
    <string name="cancel_underline"><u>Cancel</u></string>
    <string name="set_time">Set Time</string>
    <string name="minutes">Minutes</string>
    <string name="time_in_minute_default_1_minute">Time in minutes</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_title">Delete ?</string>
    <string name="are_you_sure_you_have_to_delete_it">Are you sure?</string>
    <string name="stop_deleted">Stop has been deleted</string>
    <string name="optimize">Optimize</string>
    <string name="arranging_stops">Arranging stops</string>
    <string name="finalizing_optimising">Finalizing optimization</string>
    <string name="label_location_permission_description">GPS Road Map requires your location to produce an optimized route and provide accurate time &amp;distance</string>
    <string name="ok">OK</string>
    <string name="location_permission_required">Location permission required</string>
    <string name="title_location_off">Location is turned off on your device</string>
    <string name="label_description_gps_off">Enable \'Location Services\' in your phone\'s settings to continue.</string>
    <string name="save">Save</string>
    <string name="subscription_plan_one_stops">200 Stops per month</string>
    <string name="subscription_plan_one_month_price">PKR 2900.00 per month</string>
    <string name="subscription_plan_two_stops">Unlimited Stops per month</string>
    <string name="subscription_plan_two_month_price">PKR 2300.00 per month</string>
    <string name="change_plan">Change plan</string>
    <string name="free_trial">Free Trial</string>
    <string name="current_plan">Current Plan</string>
    <string name="_2_days_remaining">2 days remaining</string>
    <string name="route_setup">Route Setup</string>
    <string name="all_stops">All stops</string>
    <string name="setting">Settings</string>
    <string name="distance_unit">Distance Unit</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="distance_init">Distance unit</string>
    <string name="pref_vehicle_type" translatable="false">pref_vehicle_type</string>
    <string name="pref_distance_unit" translatable="false">pref_distance_unit</string>
    <string name="pref_map_type" translatable="false">pref_map_type</string>
    <string name="pref_navigation_app" translatable="false">pref_navigation_app</string>
    <string name="pref_average_stop_time" translatable="false">pref_average_stop_time</string>
    <string name="pref_traffic_visibility" translatable="false">pref_traffic_visibility</string>
    <string name="map_type">Map Type</string>
    <string name="defaut">Default</string>
    <string name="sattelite">Satellite</string>
    <string name="terrian">Terrian</string>
    <string name="night">Night</string>
    <string name="car">Car</string>
    <string name="bike">Bike</string>
    <string name="kilometers">Kilometers</string>
    <string name="miles">Miles</string>
    <string name="navigation_app">Navigation app</string>
    <string name="google_maps">Google Maps</string>
    <string name="waze">Waze</string>
    <string name="others">Others</string>
    <string name="average_stop_time">Average time of stop</string>
    <string name="traffic_visibility">Show Traffic</string>
    <string name="conformation">Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="txt_continue_with_google">Continue with Google</string>
    <string name="press_edit_button_to_add_editor_remove_stops">Press edit button to add, edit or remove stops</string>
    <string name="send_again"><u>Send Email Again</u></string>
    <string name="route_planner">Route Planner</string>
    <string name="enable_location">Enable location</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="why_login_description">Route Planner automatically synchronizes your routes and current progress between each device with which you are logged in. This ensures that you always have a backup so you lose a route.\n    We never sell or transfer your data to any third party. </string>
    <string name="change_account">Change Account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_password_ul"><u>Forgot password</u></string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="can_not_find_closest_road">Can not find closest road</string>
    <string name="automatically_optimize_your_stops_avoid_traffic_and_get_home_earlier">Automatically optimize your stops, avoid traffic and get home earlier.</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="password">Password</string>
    <string name="why_must_be_login">WHY MUST BE LOGIN ?</string>
    <string name="route_name">Route name</string>
    <string name="hint_set_home_location">Enter your home location to start your navigation</string>
    <string name="hint_set_destination_location">Enter your destination location so you can arrive quickly</string>
    <string name="pick_location">Pick Location</string>
    <string name="search_here">Search here</string>
    <string name="clear_stop">Clear Stop</string>
    <string name="are_you_sure_to_remote_all_stop">Are you sure you want to remove all stops from this route?</string>
    <string name="continue_without_adding_destination">Are you sure to  continue without adding destination of stops?</string>
    <string name="general_preferences">General preferences</string>
    <string name="bike_google_map_only">Bike ( Google maps only )</string>
    <string name="now">Now</string>
    <string name="anytime">Anytime</string>
    <string name="default_1_min">Default (1 min)</string>
    <string name="can_not_fint_closest_route">We can\'t find closest road to you destination</string>
    <string name="optimizing_your_stops">Optimizing your stops</string>
    <string name="added">Added</string>
    <string name="cant_delete_default_route">You can not delete default Route</string>
    <string name="route_finished">Route finished</string>
    <string name="enter_time">Enter time</string>
    <string name="minutes_mustbe_between_1_to_60">Minutes must be in range between 1 to 60!</string>
    <string name="optimization_fail_try_again">Optimization fail try again</string>
    <string name="add_destination">Kindly add destination</string>
    <string name="add_atleast_one_stop">Kindly add at least one stop or destination</string>
    <string name="do_you_want_to_exit">Do you want to exit ?</string>
    <string name="enjoying_this_app">Enjoying this app?</string>
    <string name="skip">Skip</string>
    <string name="stop_limit_exceeded">Stops Limit Exceed</string>
    <string name="stop_limit_exceeded_description">You can only add 25 stops at this time. Wait for the update to add more stops.</string>
    <string name="understand">Understand</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_to_exit_app">Are you sure to exit App?</string>
    <string name="we_will_greatly_appreciated_if_you_rate_us">We will greatly appreciated if you Rate Us</string>
    <string name="remove_annoying_ads_forever">Remove Annoying Ads Forever</string>
    <string name="btn_continue">Continue</string>
    <string name="address_hint">Enter Your Address</string>
    <string name="tutorial_second_title">Add Your Address</string>
    <string name="tutorial_second_desc">Include your address, it will only be saved on your phone, no one will be able to access your address</string>
</resources>