<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:gravity="center"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/rate_us"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:text="@string/are_you_sure_to_exit_app"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <LinearLayout
        android:id="@+id/fb_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/rate_us_title_txt"
        android:layout_width="match_parent"
        android:layout_height="20sp"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/we_will_greatly_appreciated_if_you_rate_us"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />


    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:rating="0"
        android:stepSize="1" />


</LinearLayout>